test/Fail/Issue7954a.err
Issue7954a.agda:12.16-23: error: [InvalidDottedExpression]
Invalid dotted expression
when scope checking (proj)
